Add pre-req instructions

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-YOUVERSION_KEY='THISISNOTAREALKEY'
-SLACK_KEY='THISISNOTAREALKEY'
+YOUVERSION_TOKEN='THISISNOTAREALKEY'
+SLACK_BOT_TOKEN='THISISNOTAREALKEY'
